<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">FullCharge Alarm</string>
    <string name="app_version">4.4.2</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner_ad_unit_id">ca-app-pub-3852588011823624/6351916798</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_set">Settings</string>
    <string name="btn_shr">Share</string>
    <string name="btn_stpal">Stop Alarm</string>
    <string name="btr_chrg_ac">Charging(AC)</string>
    <string name="btr_chrg_no">Not Charging</string>
    <string name="btr_chrg_usb">Charging(USB)</string>
    <string name="btr_chrg_wls">Charging(WIRELESS)</string>
    <string name="btr_htl_1">UNKNOWN</string>
    <string name="btr_htl_2">GOOD</string>
    <string name="btr_htl_3">OVERHEAT</string>
    <string name="btr_htl_4">DEAD</string>
    <string name="btr_htl_5">OVER VOLTAGE</string>
    <string name="btr_htl_6">COLD</string>
    <string name="btr_htl_7">UNSPECIFIED FAILURE</string>
    <string name="btry_sav_sum">Turn off battery saver for this App</string>
    <string name="btry_sav_title">Battery Saver Restrictions</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="error">Error Report</string>
    <string name="etcdlg_btn">OK</string>
    <string name="etcdlg_txt">Keep plugged in for the time below \10(Hr : Min) to Full Charge</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="full_des">Unplug The Charger \10 Save Energy</string>
    <string name="full_stp">Stop</string>
    <string name="full_txt1">Battery Full Level is reached.</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="key_btrysaver">key_btry</string>
    <string name="key_err">key_er</string>
    <string name="key_feedback">key_send_feedback</string>
    <string name="key_rate">key_rateus</string>
    <string name="lng_btn">Continue</string>
    <string name="lng_ttl">Choose Language</string>
    <string name="low_des">Plug The Charger</string>
    <string name="low_stp">Stop</string>
    <string name="low_txt1">Battery Low Level is reached.</string>
    <string name="mn_stp_01">Alarm is disabled \10 Restart Alarm by Restarting the App</string>
    <string name="mn_stp_02">Alarm is already stopped</string>
    <string name="mn_stp_03">You Can Stop Alarm when Charging only</string>
    <string name="mn_tost_1">Alarm Disabled</string>
    <string name="mn_tost_2">Alarm set at battery</string>
    <string name="mndlg_2">Avoid over heat temperature 45℃ / 113°F</string>
    <string name="mndlg_21">Current =</string>
    <string name="mndlg_3">Battery maintenance</string>
    <string name="mndlg_31">★Customize which apps can use location\10 ★Turn off auto-sync\10 ★Remove on-screen widgets</string>
    <string name="mndlg_4">Charging attention</string>
    <string name="mndlg_41">★Plug out charger on full charge\10 ★Use compatible charger\10 ★Use good quality charger</string>
    <string name="mndlg_5">Use charger which is compatible with this voltage</string>
    <string name="mndlg_51">Your battery is of</string>
    <string name="mndlg_6">Milliampere hour</string>
    <string name="mndlg_61">Charged</string>
    <string name="mndlg_62">Total</string>
    <string name="mndlg_htl">Your battery health is -</string>
    <string name="mndlg_htl_vls">Good || Overheat || Dead || Over Voltage || Cold</string>
    <string name="mnu_abt">About</string>
    <string name="mnu_err">Error Report</string>
    <string name="mnu_pm">Give Permission</string>
    <string name="mnu_pms">Permissions</string>
    <string name="mnu_rts">Rate Us</string>
    <string name="mnu_shr">Share</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="next">NEXT</string>
    <string name="noti_charged">Charged</string>
    <string name="noti_charging">Charging</string>
    <string name="noti_fullcharged">Full Charged, Unplug The Charger to Save Energy</string>
    <string name="noti_hr">Hr</string>
    <string name="noti_minutil">Min until full</string>
    <string name="noti_title">Alarm ON</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pref_alm_fl">Full Battery Alarm</string>
    <string name="pref_alm_lw">Low Battery Alarm</string>
    <string name="pref_default_flvl">100</string>
    <string name="pref_des_almfl">Alarm off/on when charged</string>
    <string name="pref_des_almlw">Alarm off/on when battery low</string>
    <string name="pref_description_social_recommendations">Vibration when battery alarm</string>
    <string name="pref_group1">General</string>
    <string name="pref_group2">Low Battery Alarm</string>
    <string name="pref_group3">About</string>
    <string name="pref_group4">Full Battery Alarm</string>
    <string name="pref_header_general">Settings</string>
    <string name="pref_low_def">20</string>
    <string name="pref_low_ttl">Low battery level</string>
    <string name="pref_ringtone_silent">Default Tone</string>
    <string name="pref_title_add_friends_to_messages">Alarm Volume</string>
    <string name="pref_title_display_name">Vibration</string>
    <string name="pref_title_locale">Language</string>
    <string name="pref_title_ringtone">Alarm Ringtone</string>
    <string name="pref_title_social_recommendations">Alarm Level</string>
    <string name="rate">Rate Us</string>
    <string name="search_menu_title">Search</string>
    <string name="set_er_btn_neg">Still Not Solved</string>
    <string name="set_er_btn_pos">Cancel</string>
    <string name="set_er_hd">If you facing any issue then do these steps</string>
    <string name="set_ques">Q1 Alarm Not Coming After updating App ?\10 Ans:- Remove the Auto Start Permission Then Re-give it.\10 \10Q2 Vibration Not working ?\10 Ans:- Vibration Can not work more then 2 minutes\10 \10 Q3 Low Battery Alert Not Working If ? \10 Ans:- Low battery alert may not work in power saver mode. So set its level just after the power saver limit. Its ideal range is 16 to 25 \10 \10 Q4 Custom Ringtone not coming ? \10 Ans:- Custom ringtone will only work when storage permission for this app is given, if problem persist give this manually.\10 \10 Q5 What is Auto Start Permission ? \10 Ans:- Auto Start is background run permission. The App will not work automatic without this permission.\10 \10 Q6 Auto Start Permission is given but automatic Alarm not coming ? \10 Ans:- Turn the permission off and then give the auto start permission again. If still facing the problem then reinstall app and give the permission again.\10 \10 Q7 What is Stop Alarm Button in App ? \10 Ans:- This is to stop alarm for once while charger is plugged. Next time you charge the phone the alarm will come.</string>
    <string name="set_rs_btn_neg">NO, I DISLIKE</string>
    <string name="set_rs_btn_ntl">Cancel</string>
    <string name="set_rs_btn_pos">YES, I LIKE IT!</string>
    <string name="set_rs_btn_tll">Do you like FullCharge Alarm?</string>
    <string name="set_rs_btn_tost">Thank you for feedback</string>
    <string name="shr_chs">Choose One</string>
    <string name="shr_txt">Recommending you this application\10 This is an automated Alarm App for battery full charging. It will Protect your Phone from Overcharge and make the Battery healthy. It will also help you to Save Energy!!\10\10</string>
    <string name="skip">SKIP</string>
    <string name="slide_1_desc">Open the Security app then go to permissions then Auto Start \10 Enable the permission for Full Charge Alarm !</string>
    <string name="slide_1_title">Auto Start Permission Required!</string>
    <string name="slide_2_desc">For Full Charge Alarm!</string>
    <string name="slide_2_title">Turn Off Battery Saver Restrictions</string>
    <string name="start">GOT IT</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="strg_pm_give">Give</string>
    <string name="strg_pm_message">Storage Permission is required to set custom ringtone. \10\10This app is not accessing your personal data, storage permission is required only for setting custom ringtone from your storage.</string>
    <string name="strg_pm_title">Permission Required</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_version">Version</string>
</resources>
